Archive2/3c/85475ff7051be0/output
main.cpp: In function 'int main()':
main.cpp:8:271: error: 'stcpy' was not declared in this scope
     stcpy(t,"002020070210675       20070112OPTMAADV            20070112SUCCES    20070112SO1                                                                                                                                                                                A");
                                                                                                                                                                                                                                                                               ^
